--- a/main.css
+++ b/main.css
@@ -285,6 +285,16 @@ body {
     font-size: 27px;
     margin-top: 10px;
 }
+.reveal {
+    opacity: 0;
+    transform: translateY(50px);
+    transition: all 0.8s ease;
+}
+
+.reveal.active {
+    opacity: 1;
+    transform: translateY(0);
+}
 
 /* === АНІМАЦІЇ === */
 @keyframes gradientShift {
@@ -377,3 +387,4 @@ body {
         word-wrap: break-word;
     }
 }
+
